# workbook-cli

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
skills/workbook-cli/: SKILL.md
tests/: test_cli_parser.py  test_dates.py  test_render.py  test_timesheet.py
workbook_cli/: __init__.py  auth.py  cli.py  client.py  config.py  dates.py  jobs.py  jsonio.py  render.py  timesheet.py
